--- a/pylint.html
+++ b/pylint.html
@@ -4,8 +4,8 @@
 	<link rel = "stylesheet" href="style.css">
 </head>
 <body>
-	<h2>How to use Pylint</h2>
-<h3>Intro</h3>
+	<h1>How to use Pylint</h1>
+<h2>Intro</h2>
 <p>If you are new to coding standards, Pylint can guide you to see what's really going on in the background and help you become a more aware programmer.<br>
 Learning how to share code with others is imperative in the programming field.<br>
 It would be almost impossible to work on code with multiple people if they all used their own style of writing it.<br>
@@ -14,6 +14,27 @@ code in a uniformed way that makes the most sense for shared code.
 This style is captured in PEP-8, Pylint can be a quick and easy way of seeing if your code has captured the essence<br> 
 of PEP-8 and is therefore 'friendly' to other potential users.
 </p>
-
+<h2>Getting Started</h2>
+<p>Running Pylint with no arguments will invoke the help dialogue and give you an idea of the arguments available to you.<br>
+This gives you a hint of what Pylint is going to pick up on:</p>
+<div>
+	<img src="criteria.png">
+</div>
+<h2>First Pylint'ing</h2>
+<p>We'll use the Multiplication class as an example:</p>
+<br>
+<div>
+	<img src="example.png">
+</div>
+<p>If we run this we get the following:</p>
+<div>
+	<img src="output.png">
+</div>
+<br>
+<p>If I didn't know what the first error message meant, I could run this command as an example:</p>
+<div id="small">
+	<img src="msg.png">
+</div>
+<p>You can repeat this process until you fix all error messages</p>
 </body>
 </html>
